Add unit tests for `AddressBasedAuthorizerFactory`, validate input constraints in `buildMajorityAuthorizer`